deployment/express-portfolio-assignment.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-portfolio-assignment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: express-portfolio-assignment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-portfolio-assignment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-portfolio-assignment
  template:
    metadata:
      labels:
        app: express-portfolio-assignment
#      annotations:
#        consul.hashicorp.com/connect-inject: "true"
    spec:
      containers:
      - name: express-portfolio-assignment
        image: glad2os/express-portfolio-assignment:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
