deployment/reverseProxyDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  labels:
    app: express-portfolio-assignment
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "your-certificate-id"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector: # connection between services
    app: express-portfolio-assignment
    tier: reverse-proxy
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  labels:
    app: express-portfolio-assignment
spec:
  selector:
    matchLabels:
      app: express-portfolio-assignment
      tier: reverse-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: express-portfolio-assignment
        tier: reverse-proxy
    spec:
      containers:
      - image: glad2os/reverse-proxy:latest
        name: reverse-proxy
        ports:
        - containerPort: 80
          name: reverse-proxy
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
